--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,11 @@
   },
   "extends": ["airbnb", "plugin:react/recommended"],
   "plugins": ["react"],
-  "ignorePatterns": ["dist/", "build/", "src/"]
+  "rules": {
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "react/react-in-jsx-scope": "off",
+    "import/no-unresolved": "off",
+    "no-shadow": "off"
+  },
+  "ignorePatterns": ["dist/", "build/"]
 }
